--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,24 +1,25 @@
 pipeline {
     agent any
+    
     stages {
-        stage("Clean Up"){
+        stage('Checkout') {
             steps {
-                deleteDir()
+                // Đặt đường dẫn của mã nguồn chương trình C
+                sh 'git clone https://github.com/cuongmaidt2/Command_Line_Arguments.git'
             }
         }
-        stage("Clone Repo"){
+        
+        stage('Build') {
             steps {
-                sh "git clone https://github.com/cuongmaidt2/Command_Line_Arguments.git"
+                // Thực hiện các lệnh build chương trình C
+                sh 'gcc -o output Command_Line_Arguments.c'
             }
         }
-        stage("Build"){
+        
+        stage('Test') {
             steps {
-                echo "Build Step"
-            }
-        }
-        stage("Test"){
-            steps {
-                echo "Test Step"
+                // Thực hiện các lệnh kiểm tra chương trình C
+                sh './output'
             }
         }
     }
