--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage('Checkout') {
             steps {
                 // Đặt đường dẫn của mã nguồn chương trình C
-                sh 'git clone https://github.com/cuongmaidt2/Command_Line_Arguments.git'
+                sh "git clone https://github.com/cuongmaidt2/Command_Line_Arguments.git"
             }
         }
         
