--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,6 +2,11 @@ pipeline {
     agent any
     
     stages {
+        stage("Clean Up"){
+            steps {
+                deleteDir()
+            }
+        }
         stage('Checkout') {
             steps {
                 // Đặt đường dẫn của mã nguồn chương trình C
