--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Build') {
             steps {
                 // Thực hiện các lệnh build chương trình C
-                sh 'gcc -o output Command_Line_Arguments.c'
+                sh "gcc -o output Command_Line_Arguments.c"
             }
         }
         
