--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,7 +17,10 @@ pipeline {
         stage('Build') {
             steps {
                 // Thực hiện các lệnh build chương trình C
-                sh "gcc -o output Command_Line_Arguments.c"
+                sh '''
+                    cd /var/jenkins_home/workspace/Command_Line_Arguments
+                    gcc -o output Command_Line_Arguments.c
+                '''
             }
         }
         
