--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Build') {
             steps {
                 // Thực hiện các lệnh build chương trình C
-                sh "gcc Command_Line_Arguments.c -o Command_Line_Arguments"
+                CMD "gcc Command_Line_Arguments.c -o Command_Line_Arguments"
             }
         }
         
