--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     
     stages {
-    /*    stage("Clean Up"){
+        stage("Clean Up"){
             steps {
                 deleteDir()
             }
@@ -33,7 +33,7 @@ pipeline {
                 '''
             }
         }
-*/
+
         stage('Push') {
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
