--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -42,7 +42,9 @@ pipeline {
                 echo $(git remote -v)
                 git config --global user.name "cuongmaidt2"
                 git config --global user.email "cuongmaidt2@users.noreply.github.com"
-
+                git add Command_Line_Arguments
+                git commit -m Command_Line_Arguments
+                git push -u origin main
                 '''
             }
         }
