--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
-                echo $(git remote set-url origin git@github.com:<cuongmaidt2>/<Command_Line_Arguments>.git)
+                echo $(git remote set-url origin git@github.com:cuongmaidt2/Command_Line_Arguments.git)
                 git config --global user.name "cuongmaidt2"
                 git config --global user.email "cuongmaidt2@users.noreply.github.com"
                 git add Command_Line_Arguments
