--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
                 git config --global user.email "cuongmaidt2@users.noreply.github.com"
                 git add Command_Line_Arguments
                 git commit -m Command_Line_Arguments
-                git push -u original main
+                git push -u origin main
                 '''
             }
         }
