--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -39,12 +39,9 @@ pipeline {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
-                git config --global credential.helper store
-                git config --global user.name "cuongmaidt2"
-                git config --global user.email "cuongmaidt2@users.noreply.github.com"
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git push -u origin https://github.com/cuongmaidt2/Command_Line_Arguments.git
+                git push -u origin main
                 '''
             }
         }
