--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,6 +38,9 @@ pipeline {
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
+                git config --global credential.helper store
+                git config --global user.name "cuongmaidt2"
+                git config --global user.email "maicuong.qt212@gmail.com"
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
