--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git remote add origin "https://$GH_TOKEN@github.com/COMPANY/REPO"
+                git push -u origin "https://$GH_TOKEN@github.com/COMPANY/REPO"
                 git push -u origin main
                 '''
             }
