--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,9 +38,10 @@ pipeline {
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
-                git config --global credential.helper store
+                echo "https://${GH_USER}:${GH_TOKEN}@github.com" >> /tmp/gitcredfile
                 git config --global user.name "maicuong.qt212@gmail.com"
                 git config --global user.email "maicuong.qt212@gmail.com"
+                git config --global credential.helper store
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
