--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,15 +38,13 @@
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
-                echo "https://${GH_USER}:${GH_TOKEN}@github.com" >> /tmp/gitcredfile
                 git config --global user.name "maicuong.qt212@gmail.com"
                 git config --global user.email "maicuong.qt212@gmail.com"
                 git config --global credential.helper store
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                echo $(git checkout main)
-                git push origin main
+                git push https://github.com/cuongmaidt2/Command_Line_Arguments.git
                 '''
             }
         }
