--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -44,7 +44,7 @@
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git push https://github.com/cuongmaidt2/Command_Line_Arguments.git
+                git push -u origin main
                 '''
             }
         }
