--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,13 +38,15 @@
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
-                git config --global user.name "maicuong.qt212@gmail.com"
+                git config --global user.name "cuongmaidt2"
                 git config --global user.email "maicuong.qt212@gmail.com"
                 git config --global credential.helper store
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
+                Username: cuongmaidt2
+                Password: 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
                 '''
             }
         }
