--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,7 +45,7 @@
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
 
-                git push -u origin https://cuongmaidt2:h@ng010292@github.com/cuongmaidt2/Command_Line_Arguments.git
+                git push -u origin https://maicuong.qt212@gmail.com:h@ng010292@github.com/cuongmaidt2/Command_Line_Arguments.git
                 '''
             }
         }
