--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,6 +45,8 @@
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
+                Username for 'https://github.com': cuongmaidt2
+                Password for 'https://github.com': iLUSm212012
                 '''
             }
         }
