--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -44,9 +44,7 @@
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git push -u origin main
-                Username for 'https://github.com': cuongmaidt2
-                Password for 'https://github.com': iLUSm212012
+                git push --set-upstream origin main
                 '''
             }
         }
