--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,13 +38,12 @@
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
-                git config --global user.name cuongmaidt2
-                git config --global user.email maicuong.qt212@gmail.com
-                git config --global credential.helper store
+                git config user.name cuongmaidt2
+                git config user.email cuongmaidt2@users.noreply.github.com
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git push -u origin main
+                git push
                 '''
             }
         }
