--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -40,6 +40,7 @@
                 sh '''
                 git config --global user.email cuongmaidt2@users.noreply.github.com
                 git config --global user.name cuongmaidt2
+                git config --global user.password dba9b-aee06
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
