--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,7 +38,9 @@
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 sh '''
-                git config --global user.password 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
+                git config --global user.email "cuongmaidt2@users.noreply.github.com"
+                git config --global user.name "cuongmaidt2"
+                curl -u "username:<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>" https://github.com/cuongmaidt2/Command_Line_Arguments.git
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
