--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -40,11 +40,10 @@
                 sh '''
                 git config --global user.email "cuongmaidt2@users.noreply.github.com"
                 git config --global user.name "cuongmaidt2"
-                curl -u "username:<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>" https://github.com/cuongmaidt2/Command_Line_Arguments.git
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git push -u origin main
+                git push https://cuongmaidt2:<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>@github.com/cuongmaidt2/Command_Line_Arguments.git --branch=gh-pages gh-pages
                 '''
             }
         }
