--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,7 +43,7 @@
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
-                git push https://cuongmaidt2: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@github.com/cuongmaidt2/Command_Line_Arguments.git --branch=gh-pages gh-pages
+                git push https://cuongmaidt2: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@github.com/cuongmaidt2/Command_Line_Arguments.git
                 '''
             }
         }
