--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,6 +18,7 @@
             steps {
                 // Thực hiện các lệnh build chương trình C
                 sh '''
+                echo "$(PWD)
                 cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
                 gcc -o Command_Line_Arguments Command_Line_Arguments.c
                 '''
