--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,7 +18,6 @@
             steps {
                 // Thực hiện các lệnh build chương trình C
                 sh '''
-                echo "$PWD"
                 cd $PWD/Command_Line_Arguments
                 gcc -o Command_Line_Arguments Command_Line_Arguments.c
                 '''
@@ -29,7 +28,7 @@
             steps {
                 // Thực hiện các lệnh kiểm tra chương trình C
                 sh '''
-                cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
+                cd $PWD/Command_Line_Arguments
                 ./Command_Line_Arguments Argv1 Argv2
                 '''
             }
@@ -40,7 +39,7 @@
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
                 sh '''
-                cd /var/jenkins_home/workspace/Command_Line_Arguments/Command_Line_Arguments
+                cd $PWD/Command_Line_Arguments
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
