--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -40,6 +40,8 @@
                 // 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
                 sh '''
                 cd $PWD/Command_Line_Arguments
+                git config --global user.email "maicuong.qt212@gmail.com"
+                git config --global user.name "TuyPhong212"
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
