--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,6 +35,10 @@
         }
 
         stage('Push') {
+            publishers {
+                mailer('cuongmv21@gmail.com', true, true)
+            }
+         /*
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
@@ -47,7 +51,7 @@
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
                 '''
-            }
+            }*/
         }
     }
 }
