--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,9 +35,9 @@
         }
 
         stage('Push') {
-            publishers {
-                mailer('cuongmv21@gmail.com', true, true)
-            }
+            //publishers {
+                //mailer('cuongmv21@gmail.com', true, true)
+            //}
          /*
             steps {
                 // Thực hiện các push file đã biên dịch lên GIT
