--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,7 +38,7 @@
             steps {
                 echo "Hello"
                 publishers {
-                mailer('cuongmv21@gmail.com', true, true)
+                mailer("cuongmv21@gmail.com", true, true)
                 }
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
