--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -50,12 +50,13 @@
                 git push -u origin main
                 '''
                 */
-             failure {
-                mail to: 'cuongmv21@gmail.com',
-                subject: "Failed Pipeline: ${currentBuild.fullDisplayName}",
-                body: "Something is wrong with ${env.BUILD_URL}"
-                }
             }
+         post {
+                failure {
+                    mail to: 'team@example.com',
+                         subject: "Failed Pipeline: ${currentBuild.fullDisplayName}",
+                         body: "Something is wrong with ${env.BUILD_URL}"
+                }
         }
     }
 }
