--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -53,10 +53,11 @@
             }
          post {
                 failure {
-                    mail to: 'team@example.com',
+                    mail to: 'cuongmv21@gmail.com',
                          subject: "Failed Pipeline: ${currentBuild.fullDisplayName}",
                          body: "Something is wrong with ${env.BUILD_URL}"
                 }
+            }
         }
     }
 }
