--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -36,7 +36,7 @@
 
         stage('Push') {
             steps {
-                echo "Hello"
+                echo "Hello"...
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
                  /*
