--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -36,10 +36,10 @@
 
         stage('Push') {
             steps {
-                echo "Hello"...
+                echo "Hello"
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
-                 /*
+                
                 sh '''
                 cd $PWD/Command_Line_Arguments
                 git config --global user.email "maicuong.qt212@gmail.com"
@@ -49,7 +49,7 @@
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
                 '''
-                */
+                
             }
          post {
                 failure {
