--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -53,5 +53,12 @@
             }
         }
     }
+   post {
+       failure {
+           mail to: 'team@example.com',
+                subject: "Failed Pipeline: ${currentBuild.fullDisplayName}",
+                body: "Something is wrong with ${env.BUILD_URL}"
+       }
+   }  
 }
 // git remote set-url origin https://SHA256:IN85Yt0fecgcWOJMmcoj9Tc24pu0wAkBCjoT3XzGEaw@github.com/cuongmaidt2/Command_Line_Arguments.git
