--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -39,7 +39,7 @@
                 echo "Hello"
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
-                /**/
+                /**
                 sh '''
                 cd $PWD/Command_Line_Arguments
                 git config --global user.email "maicuong.qt212@gmail.com"
@@ -49,7 +49,7 @@
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
                 '''
-                /**/
+                **/
             }
         }
     }
@@ -57,7 +57,7 @@
        success {
                echo 'I succeeded!'
            }
-       failure {
+       unsuccessful {
            mail to: 'cuongmv21@gmail.com',
                 subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
                 body: "Something is wrong with ${env.BUILD_URL}"
