--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -65,7 +65,7 @@
       changed {
               mail to: 'cuongmv21@gmail.com',
                 subject: "Jenkins build is back to normal: ${currentBuild.fullDisplayName}",
-                body: "Finish: SUCCESS with ${env.BUILD_URL}"
+                body: "Finish: SUCCESS with ${env.BUILD_URL}"\n"${Jenkins.instance.getBuildByNumber(env.BUILD_NUMBER).log}"
           }
    }  
 }
