--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -58,9 +58,11 @@
                echo 'I succeeded!'
            }
        unsuccessful {
+        //body: "Something is wrong with ${env.BUILD_URL}\nhrrrrrrrrrrr"
+           def consoleOutput = "${Jenkins.instance.getBuildByNumber(env.BUILD_NUMBER).log}"
            mail to: 'cuongmv21@gmail.com',
                 subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
-                body: "Something is wrong with ${env.BUILD_URL}\nhrrrrrrrrrrr"
+                body: "${consoleOutput}"
        }
       changed {
               mail to: 'cuongmv21@gmail.com',
