--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -57,12 +57,12 @@
        success {
                echo 'I succeeded!'
            }
-       unsuccessful {
+       unstable {
         //body: "Something is wrong with ${env.BUILD_URL}\nhrrrrrrrrrrr"
            echo 'I failure !'
            mail to: 'cuongmv21@gmail.com',
                 subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
-                body: "${Jenkins.instance.getBuildByNumber(env.BUILD_NUMBER).log}"
+                body: "Something is wrong with ${env.BUILD_URL}"
        }
       changed {
               mail to: 'cuongmv21@gmail.com',
