--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -62,7 +62,7 @@
            echo 'I failure !'
            mail to: 'cuongmv21@gmail.com',
                 subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
-                body: readFile "${env.BUILD_LOG}"
+                body: "${env.BUILD_LOG}"
        }
       changed {
               mail to: 'cuongmv21@gmail.com',
