--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -61,8 +61,10 @@
         //body: "Something is wrong with ${env.BUILD_URL}\nhrrrrrrrrrrr"
            echo 'I failure !'
            mail to: 'cuongmv21@gmail.com',
+                attachLog: true,
                 subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
-                body: "Something is wrong with ${env.BUILD_URL}"
+                body: "Something is wrong with ${env.BUILD_URL}",
+                compressLog: true
        }
       changed {
                        echo 'I succeeded!'
