--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -60,7 +60,7 @@
        failure {
         //body: "Something is wrong with ${env.BUILD_URL}\nhrrrrrrrrrrr"
            echo 'I failure !'
-           mail to: 'cuongmv21@gmail.com',
+           emailext to: 'cuongmv21@gmail.com',
                 attachLog: true,
                 subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
                 body: "Something is wrong with ${env.BUILD_URL}",
