--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -60,10 +60,10 @@ pipeline {
            }
        failure {
         //body: "Something is wrong with ${env.BUILD_URL}\nhrrrrrrrrrrr"
-           echo 'I failure !'
-           mail to: 'cuongmv21@gmail.com',
+            echo 'I failure !'
+            mail to: 'cuongmv21@gmail.com',
             subject: "Build Failed in Jenkins Pipeline: ${currentBuild.fullDisplayName}",
-            body: "Something is wrong with ${env.BUILD_URL}",
+            body: "Something is wrong with ${env.BUILD_URL}"
                 
        }
       changed {
