--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -43,6 +43,7 @@ pipeline {
                 /**/
                 sh '''
                 cd $PWD/Command_Line_Arguments
+                echo " sh" git status" "
                 git config --global user.email "maicuong.qt212@gmail.com"
                 git config --global user.name "TuyPhong212"
                 git config remote.origin.url https://github.com/TuyPhong212/Command_Line_Arguments.git
