--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -41,12 +41,12 @@ pipeline {
                 // Thực hiện các push file đã biên dịch lên GIT
                 // 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
                 /**/
-                echo " sh" git status" "
                 sh '''
                 cd $PWD/Command_Line_Arguments
                 git config --global user.email "maicuong.qt212@gmail.com"
                 git config --global user.name "TuyPhong212"
                 git config remote.origin.url https://github.com/TuyPhong212/Command_Line_Arguments.git
+                git status
                 git add Command_Line_Arguments
                 git commit -m "Command_Line_Arguments"
                 git push -u origin main
